# Mudette-RAGE

./: QUICKSTART.md  README.md  pyproject.toml
corpus/: attacks.json  benign.json
demo_pack/nexa_copilot/: agent_profile.json  attack_playbook.json  benign_playbook.json  judge_prompt.txt  secrets_vault.json  system_prompt.txt
demo_pack/nexa_copilot/kb/: chunks.json  index.faiss  manifest.json
demo_pack/nexa_copilot/kb_src/: it_policies.md  mdm_enrollment.md  ticket_management.md  vpn_troubleshooting.md
scripts/: build-kb.sh  build_kb.py  generate-glossary-pdf.sh  generate_command_glossary.py  run-benchmarks-no-judge.sh  run-benchmarks-with-judge.sh  run-benchmarks.sh  run-benign-check.sh  run-demo.sh  run-scenario.sh  run-tests.sh  setup.sh
scripts/lib/: common.sh
src/mtguard/: __init__.py  agent.py  embedder.py  judge.py  models.py  nim.py  pack_loader.py  pipeline.py  rag.py  rules.json  trace.py
src/mtguard/demo/: __init__.py  app.py  scenario.py
src/mtguard/gates/: __init__.py  user_gate.py
src/mtguard/layers/: __init__.py  fusion.py  l1_regex.py  l2_trajectory.py
tests/: conftest.py  test_agent.py  test_fusion.py  test_l1.py  test_l2.py  test_pack_loader.py  test_pipeline.py  test_rag.py  test_user_gate.py
