[project]
name = "mudette"
version = "0.1.0"
description = "MTGuard demo: multi-turn prompt injection defense for Nexa Copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.8.0",
    "gradio>=4.44.0",
    "numpy>=1.26.0",
    "openai>=1.40.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
Mudette-demo = "mtguard.demo.app:main"
Mudette-scenario = "mtguard.demo.scenario:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtguard"]

[tool.hatch.build.targets.wheel.force-include]
"src/mtguard/rules.json" = "mtguard/rules.json"

[tool.hatch.build.targets.sdist]
include = ["src/mtguard", "demo_pack", "corpus", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.0.0", "fpdf2>=2.8.0"]
